--- a/pokemon/src/index.css
+++ b/pokemon/src/index.css
@@ -1,14 +1,14 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.pokemon {
+  border: 1px solid black;
+  line-height: 0;
+  width: 30%;
+  text-align: center;
+  margin: 5px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.pokemonContainer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+
 }
